static/styles.css
body {
    font-family: Arial;
}

.container {
    margin: 1% auto;
    width: 50%;
    padding: 1% 5%;
}

.header {
    text-align: center;
    font-size: 2em;
    font-weight: bold;
    padding: 30px;
    transition: all 0.5s ease;
}

.header a {
    text-decoration: none;
    color: black;
}

.header.up {
    font-size: 1.3em;
    padding: 0;
}

.footer {
    font-size: 11px;
    position: fixed;
    bottom: 5px;
    right: 10px;
}

.footer div {
    margin: 2px;
    display: inline-block;
}

.footer a {
    color: #666;
}

.search {
    width: 50%;
    padding: 15px;
    font-size: 16px;
    margin: auto;
    display: block;
}

.results {
    margin: 5% auto 0 auto;
    border: 1px solid #ddd;
    font-size: 16px;
}

.results th {
    width: 100px;
    padding: 10px;
}

.results tr.even {
    background-color: #eee;
}

.results td {
    padding: 10px;
}

.results td a {
    color: #666;
}

.results td a:visited {
    color: #999;
}

.results td a:hover {
    position: relative;
    top: 1px;
}

.alert {
    padding: 10px;
    margin: 20px auto;
    text-align: center;
}

.warning {
    background: beige;
}

.error {
    background: red;
}

.wait {
    text-align: center;
    font-size: 1.3em;
    margin: 60px;
}

.breadcrumb {
    text-align: left;
    font-size: 1.1em;
    margin-bottom: 30px;
}

.breadcrumb > div {
    float: left;
    margin-right: 10px;
}

.breadcrumb a {
    color: #999;
}

.folder-container {
    width: 100%;
}

.folder-container tr {
    text-align: left;
}

.folder-container a {
    color: #999;
}

.folder-container a:hover {
    position: relative;
    top: 1px;
}

.file-container {
    text-align: left;
    word-wrap: break-word;
    border: 1px solid;
}

.file-container pre {
    padding:10px;
    white-space: pre-line;
    word-wrap: break-word;
}

.highlighttable {
    font-size: 1.1em;
    width: 100%;
}

.linenodiv a {
    color: #333;
    text-decoration: none;
}

.linenodiv a:hover {
    position: relative;
    top: 1px;
    color: #666;
}

.linenodiv {
    margin: 0 10px;
}

/* Below is pygments default css. */
.highlight .hll { background-color: #ffffcc }
.highlight .c { color: #408080; font-style: italic }
.highlight .err { border: 1px solid #FF0000 }
.highlight .k { color: #008000; font-weight: bold }
.highlight .o { color: #666666 }
.highlight .cm { color: #408080; font-style: italic }
.highlight .cp { color: #BC7A00 }
.highlight .c1 { color: #408080; font-style: italic }
.highlight .cs { color: #408080; font-style: italic }
.highlight .gd { color: #A00000 }
.highlight .ge { font-style: italic }
.highlight .gr { color: #FF0000 }
.highlight .gh { color: #000080; font-weight: bold }
.highlight .gi { color: #00A000 }
.highlight .go { color: #808080 }
.highlight .gp { color: #000080; font-weight: bold }
.highlight .gs { font-weight: bold }
.highlight .gu { color: #800080; font-weight: bold }
.highlight .gt { color: #0040D0 }
.highlight .kc { color: #008000; font-weight: bold }
.highlight .kd { color: #008000; font-weight: bold }
.highlight .kn { color: #008000; font-weight: bold }
.highlight .kp { color: #008000 }
.highlight .kr { color: #008000; font-weight: bold }
.highlight .kt { color: #B00040 }
.highlight .m { color: #666666 }
.highlight .s { color: #BA2121 }
.highlight .na { color: #7D9029 }
.highlight .nb { color: #008000 }
.highlight .nc { color: #0000FF; font-weight: bold }
.highlight .no { color: #880000 }
.highlight .nd { color: #AA22FF }
.highlight .ni { color: #999999; font-weight: bold }
.highlight .ne { color: #D2413A; font-weight: bold }
.highlight .nf { color: #0000FF }
.highlight .nl { color: #A0A000 }
.highlight .nn { color: #0000FF; font-weight: bold }
.highlight .nt { color: #008000; font-weight: bold }
.highlight .nv { color: #19177C }
.highlight .ow { color: #AA22FF; font-weight: bold }
.highlight .w { color: #bbbbbb }
.highlight .mf { color: #666666 }
.highlight .mh { color: #666666 }
.highlight .mi { color: #666666 }
.highlight .mo { color: #666666 }
.highlight .sb { color: #BA2121 }
.highlight .sc { color: #BA2121 }
.highlight .sd { color: #BA2121; font-style: italic }
.highlight .s2 { color: #BA2121 }
.highlight .se { color: #BB6622; font-weight: bold }
.highlight .sh { color: #BA2121 }
.highlight .si { color: #BB6688; font-weight: bold }
.highlight .sx { color: #008000 }
.highlight .sr { color: #BB6688 }
.highlight .s1 { color: #BA2121 }
.highlight .ss { color: #19177C }
.highlight .bp { color: #008000 }
.highlight .vc { color: #19177C }
.highlight .vg { color: #19177C }
.highlight .vi { color: #19177C }
.highlight .il { color: #666666 }

